--- a/mainPage.html
+++ b/mainPage.html
@@ -4,46 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>کافه رستوران</title>
+
   <link rel="stylesheet" href="mainPage.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 
 <body>
+  <div class="glass-overlay"></div>
+
   <header>
     <div class="menu-icon">☰</div>
     <div class="logo">کافه رستوران اوسیس</div>
     <nav>
       <ul>
-        <li><a href="../project/mainPage.html" title="صفحه اصلی"><i class="fas fa-home"></i></a></li>
-        <li><a href="../project/menuPage.html" title="منو"><i class="fas fa-utensils"></i></a></li>
-        <li><a href="../project/login.html" title="ورود"><i class="fas fa-user"></i></a></li>
+        <li><a href="../Cafe-Restaurant-Website/mainPage.html" title="صفحه اصلی"><i class="fas fa-home"></i></a></li>
+        <li><a href="../Cafe-Restaurant-Website/menuPage.html" title="منو"><i class="fas fa-utensils"></i></a></li>
+        <li><a href="../Cafe-Restaurant-Website/login.html" title="ورود"><i class="fas fa-user"></i></a></li>
       </ul>
-</nav>
-
+    </nav>
   </header>
 
-  <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="close-btn" id="closeBtn">✖</div>
     <ul>
-      <li><a href="../project/profilePage.html">پنل کاربری</a></li>
-      <li><a href="../project/menuPage.html">منو</a></li>
-      <li><a href="../project/reservePage.html">رزرو مراسم</a></li>
-      <li><a href="../project/jobPositionPage.html">فرصت‌های شغلی</a></li>
-      <li><a href="../project/personnelPage.html">معرفی پرسنل</a></li>
-      <li><a href="../project/recipes.html">رسپی ها</a></li>
-      <li><a href="../project/blog.html">اخبار و تازه‌ها</a></li>
+      <li><a href="../Cafe-Restaurant-Website/profilePage.html">پنل کاربری</a></li>
+      <li><a href="../Cafe-Restaurant-Website/menuPage.html">منو</a></li>
+      <li><a href="../Cafe-Restaurant-Website/reservePage.html">رزرو مراسم</a></li>
+      <li><a href="../Cafe-Restaurant-Website/jobPositionPage.html">فرصت‌های شغلی</a></li>
+      <li><a href="../Cafe-Restaurant-Website/personnelPage.html">معرفی پرسنل</a></li>
+      <li><a href="../Cafe-Restaurant-Website/recipes.html">رسپی ها</a></li>
+      <li><a href="../Cafe-Restaurant-Website/blog.html">اخبار و تازه‌ها</a></li>
     </ul>
   </div>
 
   <section class="hero"></section>
 
-  <!-- ===== بخش مستطیل‌ها ===== -->
   <section class="main-options">
-
-    <a class="option option-menu" href="../project/menuPage.html">
+    <a class="option option-menu" href="../Cafe-Restaurant-Website/menuPage.html">
       <div class="option-content">
-        <img src="../project/images/drinks-menu.png" >
+        <img src="../Cafe-Restaurant-Website/images/ic-menu2.png" >
         <h3>منوی کافه اوسیس</h3>
         <p>غذا و نوشیدنی مورد علاقه‌تون رو انتخاب کنید!</p>
       </div>
@@ -51,79 +50,65 @@
 
     <a class="option option-branch" href="#">
       <div class="option-content">
-        <img src="../project/images/coffee.png" >
+        <img src="../Cafe-Restaurant-Website/images/ic-location.png" >
         <h3>شعب اوسیس</h3>
         <p>اوسیس با حضوری قدرتمند در 50 شعبه،تجربه ای منحصرد به فرد و متمایز از نوشیدن قهوه را همراه با دسترسی سریع و آسان برای مشتریان خود فراهم کرده است.</p>
       </div>
     </a>
 
     <div class="option-row">
-
-      <a class="option option-fast" href="../project/menuPage.html">
+      <a class="option option-fast" href="../Cafe-Restaurant-Website/login.html">
         <div class="option-content">
-          <img src="../project/images/food-delivery.png">
+          <img src="../Cafe-Restaurant-Website/images/delivery-bike.png">
           <h3>سریع‌تر از همیشه!</h3>
           <p>آنلاین سفارش بده</p>
         </div>
       </a>
 
-      <a class="option option-recepi" href="../project/recipes.html">
+      <a class="option option-recepi" href="../Cafe-Restaurant-Website/recipes.html">
         <div class="option-content">
-          <img src="../project/images/paste.png">
+          <img src="../Cafe-Restaurant-Website/images/ic-resepi.png">
           <h3>رسپی ها</h3>
           <p>آشپزی رو حرفه ای یادبگیر</p>
         </div>
       </a>
-
     </div>
-
   </section>
 
-
-  <!-- ===== بخش باشگاه مشتریان (جدید) ===== -->
   <section class="club-banner" aria-label="باشگاه مشتریان">
     <div class="club-inner">
       <div class="club-text">
         <h1 class="club-brand">Loviuna</h1>
-        <h2 class="club-title">به باشگاه مشتریان کافه ویونا بپیوندید!</h2>
-        <p class="club-desc">با عضویت در Loviuna از امتیازات ویژه و ویونا برخوردار شوید.</p>
+        <h2 class="club-title">به باشگاه مشتریان کافه اوسیس بپیوندید!</h2>
+        <p class="club-desc">با عضویت در Loviuna از امتیازات ویژه ی اوسیس برخوردار شوید.</p>
         <div class="club-actions">
           <button class="club-btn" id="clubBtn">ورود به باشگاه مشتریان</button>
         </div>
       </div>
 
       <div class="club-visual" aria-hidden="true">
-        <!-- هماهنگ با عکس مرجع: یک لیوان قهوه و جعبه هدیه -->
-        <img class="club-gift" src="../project/images/giftBox.png" alt="" />
+        <img class="club-gift" src="../Cafe-Restaurant-Website/images/giftBox.png" alt="" />
       </div>
     </div>
   </section>
 
-<section class="about-section">
-<div class="about-container">
+  <section class="about-section">
+    <div class="about-container">
+      <div class="about-text">
+        <h2>کافه اوسیس؛ طعم واقعی قهوه</h2>
+        <p>
+          کافه اوسیس در سال ۱۳۸۶ با هدف ترویج فرهنگ کافه‌نشینی و ارتقای کیفیت نوشیدنی‌های بر پایه قهوه، نخستین کافه خود را در تهران تأسیس کرد.
+          در ادامه این مسیر، کارگاه‌های رستری قهوه و شیرینی‌پزی خود را در سراسر ایران گسترش داد.
+          امروز اوسیس با اختصاصی‌سازی محصولات و حفظ کیفیت و طعم بی‌نظیر خود، بیش از ۵۰ شعبه فعال دارد و با ارائه خدمات حرفه‌ای به یکی از برندهای پیشرو صنعت کافه‌داری تبدیل شده است.
+        </p>
+        <button class="about-btn">مشاهده وبلاگ</button>
+      </div>
 
-
-<div class="about-text">
-<!-- <img src="../project/images/viuna-logo.png" alt="لوگو" class="about-logo" /> -->
-
-
-<h2>کافه اوسیس؛ طعم واقعی قهوه</h2>
-<p>
-کافه ویونا در سال ۱۳۸۶ با هدف ترویج فرهنگ کافه‌نشینی و ارتقای کیفیت نوشیدنی‌های بر پایه قهوه، نخستین کافه خود را در تهران تأسیس کرد. در ادامه این مسیر، کارگاه‌های رستری قهوه و شیرینی‌پزی خود را در سراسر ایران گسترش داد.
-
-امروز ویونا با اختصاصی‌سازی محصولات و حفظ کیفیت و طعم بی‌نظیر خود، بیش از ۵۰ شعبه فعال دارد و با ارائه خدمات حرفه‌ای به یکی از برندهای پیشرو صنعت کافه‌داری تبدیل شده است.
-</p>
-
-
-<button class="about-btn">مشاهده وبلاگ</button>
-</div>
-
-<div class="about-image">
-<img src="../project/images/resturant.jpg" alt="coffee beans" />
-</div>
-
-</div>
-</section>
+      <div class="about-image">
+        <img src="../Cafe-Restaurant-Website/images/resturant.jpg" alt="coffee beans" />
+      </div>
+    </div>
+  </section>
 
   <footer>
     <div>
@@ -134,38 +119,38 @@
     <div>
       <h3>دسترسی سریع</h3>
       <ul>
-        <li><a href="../project/aboutus.html">درباره رستوران</a></li>
-        <li><a href="../project/gallery.html">گالری و تصاویر</a></li>
+        <li><a href="../Cafe-Restaurant-Website/aboutus.html">درباره رستوران</a></li>
+        <li><a href="../Cafe-Restaurant-Website/gallery.html">گالری و تصاویر</a></li>
         <li><a href="#">لیست شعبه‌ها</a></li>
       </ul>
     </div>
     <div>
       <h3>پشتیبانی</h3>
       <ul>
-        <li><a href="../project/contact.html">ارتباط با ما</a></li>
-        <li><a href="../project/rulesPage.html">شرایط و قوانین</a></li>
-        <li><a href="../project/faq.html">سؤالات متداول</a></li>
+        <li><a href="../Cafe-Restaurant-Website/contact.html">ارتباط با ما</a></li>
+        <li><a href="../Cafe-Restaurant-Website/rulesPage.html">شرایط و قوانین</a></li>
+        <li><a href="../Cafe-Restaurant-Website/faq.html">سؤالات متداول</a></li>
       </ul>
     </div>
     <div>
-  <h3>دیگر بخش‌ها</h3>
-  <ul>
-    <li><a href="#">اخبار و تازه‌ها</a></li>
-    <li><a href="#">فرصت‌های شغلی</a></li>
-  </ul>
+      <h3>دیگر بخش‌ها</h3>
+      <ul>
+        <li><a href="../Cafe-Restaurant-Website/blog.html">اخبار و تازه‌ها</a></li>
+        <li><a href="../Cafe-Restaurant-Website/jobPositionPage.html">فرصت‌های شغلی</a></li>
+      </ul>
 
-  <div class="social-icons">
-    <a href="https://instagram.com/yourcafe" target="_blank" aria-label="اینستاگرام">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://t.me/yourcafe" target="_blank" aria-label="تلگرام">
-      <i class="fab fa-telegram"></i>
-    </a>
-    <a href="https://wa.me/yourcafe" target="_blank" aria-label="واتساپ">
-      <i class="fab fa-whatsapp"></i>
-    </a>
-  </div>
-</div>
+      <div class="social-icons">
+        <a href="https://instagram.com/yourcafe" target="_blank" aria-label="اینستاگرام">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://t.me/yourcafe" target="_blank" aria-label="تلگرام">
+          <i class="fab fa-telegram"></i>
+        </a>
+        <a href="https://wa.me/yourcafe" target="_blank" aria-label="واتساپ">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+    </div>
   </footer>
 
   <script src="mainPage.js"></script>
