--- a/orderListPage.html
+++ b/orderListPage.html
@@ -2,31 +2,34 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>پنل کاربری - لیست سفارشات</title>
-
-  <!-- استایل مشترک (منو و شیشه‌ای و ...) -->
   <link rel="stylesheet" href="profilePage.css" />
-  <!-- استایل اختصاصی کارت سفارشات -->
   <link rel="stylesheet" href="orderListPage.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  />
 </head>
 <body>
-  <div class="panel-wrapper">
+  <div class="glass-overlay"></div>
 
-    <!-- هدر موبایل + دکمه همبرگری -->
+  <div class="panel-wrapper">
     <header class="mobile-header">
       <button id="menuToggle" class="hamburger" aria-label="باز کردن منو">☰</button>
     </header>
 
-    <!-- منوی ثابت (سمت چپ) دقیقا مثل پروفایل -->
     <aside class="side-menu" id="sideMenu">
       <h2 class="cafe-name">OASIS</h2>
 
       <div class="avatar-wrapper">
         <label for="avatar-input" class="avatar-circle">
-          <img id="avatarPreview"
-               class="avatar-image"
-               src="../project/images/resturant.jpg"
-               alt="عکس پروفایل" />
+          <img
+            id="avatarPreview"
+            class="avatar-image"
+            src="../Cafe-Restaurant-Website/images/pro-user.png"
+            alt="عکس پروفایل"
+          />
         </label>
         <input type="file" id="avatar-input" accept="image/*" hidden />
       </div>
@@ -34,52 +37,53 @@
       <p class="greeting">سلام سونیا!</p>
 
       <nav class="side-nav">
-        <a href="profilePage.html" class="nav-link nav-link--profile">
+        <a href="profilePage.html" class="nav-link">
+          <i class="fas fa-user"></i>
           <span class="nav-text">پروفایل</span>
         </a>
 
-        <a href="menu.html" class="nav-link nav-link--menu">
+        <a href="menuPage.html" class="nav-link">
+          <i class="fas fa-utensils"></i>
           <span class="nav-text">مشاهده منو</span>
         </a>
 
-        <a href="orderListPage.html" class="nav-link nav-link--orders active">
+        <a href="orderListPage.html" class="nav-link active">
+          <i class="fas fa-clipboard-list"></i>
           <span class="nav-text">لیست سفارشات</span>
         </a>
 
-        <a href="feedbackPage.html" class="nav-link nav-link--feedback">
+        <a href="feedbackPage.html" class="nav-link">
+          <i class="fas fa-comment-dots"></i>
           <span class="nav-text">انتقاد / پیشنهاد</span>
         </a>
 
-        <a href="reservePage.html" class="nav-link nav-link--reserve">
+        <a href="reservePage.html" class="nav-link">
+          <i class="fas fa-calendar-check"></i>
           <span class="nav-text">رزرو مراسم</span>
         </a>
 
-        <a href="logout.html" class="nav-link nav-link--logout">
+        <a href="mainPage.html" class="nav-link">
+          <i class="fas fa-right-from-bracket"></i>
           <span class="nav-text">خروج</span>
         </a>
       </nav>
     </aside>
 
-    <!-- محتوای راست -->
     <main class="panel-content">
       <h1 class="section-title">لیست سفارشات</h1>
-
-      <!-- پیام خالی بودن -->
       <p id="emptyMessage" class="empty-message" hidden>لیست سفارش خالی است.</p>
-
-      <!-- کارت فاکتور -->
       <section id="ordersSection" class="orders-card">
         <header class="orders-header">
           <span class="orders-header-title">سفارشات</span>
-          <button id="clearAllBtn"
-                  class="clear-all-btn"
-                  type="button"
-                  aria-label="حذف تمام سفارشات">
+          <button
+            id="clearAllBtn"
+            class="clear-all-btn"
+            type="button"
+            aria-label="حذف تمام سفارشات">
           </button>
         </header>
 
         <div id="ordersList" class="orders-list">
-          <!-- نمونه سفارش ۱ -->
           <div class="order-item" data-id="1" data-price="400000">
             <div class="order-box">
               <div class="qty-control">
@@ -91,7 +95,6 @@
             </div>
           </div>
 
-          <!-- نمونه سفارش ۲ -->
           <div class="order-item" data-id="2" data-price="400000">
             <div class="order-box">
               <div class="qty-control">
@@ -104,7 +107,6 @@
           </div>
         </div>
 
-        <!-- خلاصه مبالغ -->
         <div class="orders-summary">
           <div class="summary-row">
             <span>مبلغ فاکتور:</span>
@@ -131,10 +133,8 @@
       </section>
     </main>
 
-    <!-- بک‌دراپ برای موبایل -->
     <div class="backdrop" id="backdrop"></div>
   </div>
-
   <script src="orderListPage.js"></script>
 </body>
 </html>
