--- a/personnelPage.html
+++ b/personnelPage.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 
-  <!-- هدر تمام‌عرض با بک‌گراند عکس دسته‌جمعی -->
   <section class="hero">
     <div class="hero-overlay"></div>
   </section>
@@ -16,13 +15,11 @@
 
     <hr class="section-divider">
 
-    <!-- معرفی مدیرعامل و سرآشپز -->
     <section class="staff-section">
 
-      <!-- مدیرعامل -->
       <article class="staff-row staff-row--ceo">
         <div class="staff-photo-box">
-          <img src="../project/images/manager.jpg" alt="مدیرعامل کافه">
+          <img src="../Cafe-Restaurant-Website/images/manager.jpg" alt="مدیرعامل کافه">
         </div>
         <div class="staff-text">
           <h2 class="staff-name">مدیرعامل</h2>
@@ -33,7 +30,6 @@
         </div>
       </article>
 
-      <!-- سرآشپز -->
       <article class="staff-row staff-row--chef">
         <div class="staff-text">
           <h2 class="staff-name">سرآشپز</h2>
@@ -43,14 +39,13 @@
           </p>
         </div>
         <div class="staff-photo-box">
-          <img src="../project/images/chef.jpg" alt="سرآشپز">
+          <img src="../Cafe-Restaurant-Website/images/chef.jpg" alt="سرآشپز">
         </div>
       </article>
 
-      <!-- گارسون-->
       <article class="staff-row staff-row--ceo">
         <div class="staff-photo-box">
-          <img src="../project/images/waiter.jpg" alt="گارسون">
+          <img src="../Cafe-Restaurant-Website/images/waiter.jpg" alt="گارسون">
         </div>
         <div class="staff-text">
           <h2 class="staff-name">گارسون</h2>
