--- a/jobPositionPage.html
+++ b/jobPositionPage.html
@@ -2,6 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>فرصت های شغلی</title>
   <link rel="stylesheet" href="jobPositionPage.css" />
 </head>
@@ -13,7 +14,6 @@
     </header>
 
     <section class="jobs-grid">
-      <!-- هر کارت یک فرصت شغلی است -->
       <article class="job-card" data-link="jobAdvertisementPage.html?id=1">
         <div class="job-main">
           <h2 class="job-title">کارشناس ارشد فروش سازمانی (B2B , B2C)</h2>
@@ -42,35 +42,33 @@
         </div>
       </article>
 
-      <article class="job-card" data-link="jobAdvertisementPage.html?id=4">
+      <article class="job-card" data-link="jobAdvertisementPage.html?id=5">
         <div class="job-main">
           <h2 class="job-title">باریستا</h2>
           <span class="job-tag job-tag--unit">شعبه سعادت آباد</span>
         </div>
       </article>
 
-      <article class="job-card" data-link="jobAdvertisementPage.html?id=4">
+      <article class="job-card" data-link="jobAdvertisementPage.html?id=6">
         <div class="job-main">
           <h2 class="job-title">ظرفشور</h2>
           <span class="job-tag job-tag--unit">شعبه سعادت آباد</span>
         </div>
       </article>
 
-      <article class="job-card" data-link="jobAdvertisementPage.html?id=4">
+      <article class="job-card" data-link="jobAdvertisementPage.html?id=7">
         <div class="job-main">
           <h2 class="job-title">PHP Developer</h2>
           <span class="job-tag job-tag--unit">واحد تکنولوژی</span>
         </div>
       </article>
 
-      <article class="job-card" data-link="jobAdvertisementPage.html?id=4">
+      <article class="job-card" data-link="jobAdvertisementPage.html?id=8">
         <div class="job-main">
           <h2 class="job-title">UI/UX Designer</h2>
           <span class="job-tag job-tag--unit">واحد تکنولوژی</span>
         </div>
       </article>
-
-      <!-- کارت‌های دیگر هم می‌توانی به همین شکل اضافه کنی -->
     </section>
   </main>
 
