edit personel page

--- a/menuPage.html
+++ b/menuPage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>منو قهوه سرد</title>
+  <title>منو</title>
 
   <link rel="stylesheet" href="profilePage.css" />
   <link rel="stylesheet" href="menuPage.css" />
