--- a/personnelPage.html
+++ b/personnelPage.html
@@ -2,62 +2,67 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>پرسنل کافه</title>
   <link rel="stylesheet" href="personnelPage.css">
 </head>
 <body>
 
-  <section class="hero">
-    <div class="hero-overlay"></div>
-  </section>
+  <div class="glass-overlay"></div>
 
   <main class="staff-wrapper">
-
-    <hr class="section-divider">
-
     <section class="staff-section">
-
-      <article class="staff-row staff-row--ceo">
+      <article class="staff-row">
         <div class="staff-photo-box">
           <img src="../Cafe-Restaurant-Website/images/manager.jpg" alt="مدیرعامل کافه">
         </div>
+
         <div class="staff-text">
           <h2 class="staff-name">مدیرعامل</h2>
           <p>
-            اینجا می‌توانی چند جمله درباره‌ی مدیرعامل بنویسی؛
-            سابقه، دیدگاه و نقش او در شکل‌گیری کافه.
+            امیر کاظمی با هدف ساختن فضایی آرام و باکیفیت، این مجموعه را پایه‌گذاری کرده است.
+با تجربه در مدیریت و خدمات‌رسانی، تمرکزش روی رضایت مشتری و استانداردهای ثابت کیفیت است.
+او به انتخاب دقیق مواد اولیه، آموزش تیم و نظم در اجرای کارها اهمیت ویژه می‌دهد.
+با نگاه نوآورانه، همیشه به دنبال بهبود منو، ارتقای تجربه مشتری و ایجاد حس صمیمیت در کافه است.
+حضور و پیگیری مستقیم او باعث شده کافه با هویتی مشخص و خدماتی قابل اعتماد شناخته شود.
           </p>
         </div>
       </article>
-
-      <article class="staff-row staff-row--chef">
-        <div class="staff-text">
-          <h2 class="staff-name">سرآشپز</h2>
-          <p>
-            این بخش برای معرفی سرآشپز است؛ تجربه‌های کاری،
-            سبک آشپزی و علاقه‌مندی‌های او.
-          </p>
-        </div>
+      <article class="staff-row staff-row--reverse">
         <div class="staff-photo-box">
           <img src="../Cafe-Restaurant-Website/images/chef.jpg" alt="سرآشپز">
         </div>
-      </article>
 
-      <article class="staff-row staff-row--ceo">
+        <div class="staff-text">
+          <h2 class="staff-name">سرآشپز</h2>
+          <p>
+            محمد صالحی با چندین سال تجربه، مسئول کیفیت و یکدست بودن طعم غذاها و نوشیدنی‌های گرم است.
+سبک کار او ترکیبی از دستورهای کلاسیک و ایده‌های جدید، با تمرکز روی طعم متعادل و ارائه حرفه‌ای است.
+او در انتخاب مواد اولیه، تازگی و بهداشت را در اولویت قرار می‌دهد و روی جزئیات حساس است.
+هر آیتم منو قبل از اضافه شدن، چندین بار تست می‌شود تا بهترین نتیجه به دست بیاید.
+هدف اصلی او این است که هر سفارش دقیقاً همان کیفیتی را داشته باشد که مشتری انتظار دارد.
+          </p>
+        </div>
+      </article>
+      <article class="staff-row">
         <div class="staff-photo-box">
           <img src="../Cafe-Restaurant-Website/images/waiter.jpg" alt="گارسون">
         </div>
+
         <div class="staff-text">
           <h2 class="staff-name">گارسون</h2>
           <p>
-            اینجا می‌توانی چند جمله درباره‌ی مدیرعامل بنویسی؛
-            سابقه، دیدگاه و نقش او در شکل‌گیری کافه.
+            علی علوی با برخورد محترمانه و انرژی مثبت، اولین نقطه ارتباط مهم با مشتری هست.
+وظیفه اصلی او راهنمایی در انتخاب منو، ثبت دقیق سفارش و رسیدگی سریع به نیازهای میزهاست.
+دقت و نظم در سرو، همراه با توجه به جزئیات، باعث می‌شود تجربه حضور در کافه دلپذیرتر شود.
+علی تلاش می‌کند سفارش‌ها به‌موقع و با کیفیت مناسب به دست مشتری برسد.
+هدف علی این است که هر مهمان با حس خوب و خاطره‌ای خوش کافه را ترک کند.
           </p>
         </div>
       </article>
 
     </section>
-
   </main>
+
 </body>
 </html>
